--- a/glide.yaml
+++ b/glide.yaml
@@ -10,7 +10,8 @@ import:
     repo:    https://github.com/akutz/logrus
 
   - package: github.com/emccode/libstorage
-    version: v0.1.5
+    repo:    https://github.com/acquia/libstorage
+    version: 0.1.5-acquia
 
   - package: github.com/akutz/gofig
     version: v0.1.4
