--- a/glide.yaml
+++ b/glide.yaml
@@ -10,7 +10,8 @@ import:
     repo:    https://github.com/akutz/logrus
 
   - package: github.com/emccode/libstorage
-    version: v0.2.1
+    version: v0.2.1 # libstorage-version
+    repo:    https://github.com/emccode/libstorage # libstorage-repo
 
   - package: github.com/akutz/gofig
     version: v0.1.4
