ScaleIO Support Branch Update
This patch updates REX-Ray to point to the ScaleIO support branch for
TLS support for ScaleIO 2.0.0.1 as well as a new client-side fix for a
ScaleIO bug where their gateway refuses to accept their new 2.0.1
version as a valid API string.

--- a/glide-docker.yaml
+++ b/glide-docker.yaml
@@ -42,3 +42,11 @@ import:
     repo:    https://github.com/google/google-api-go-client.git
   - package: golang.org/x/net
     repo:    https://github.com/golang/net
+
+################################################################################
+##                         Storage Driver Dependencies                        ##
+################################################################################
+
+### ScaleIO
+  - package: github.com/emccode/goscaleio
+    ref:     support/tls-sio-gw-2.0.0.2
