--- a/glide.yaml
+++ b/glide.yaml
@@ -10,8 +10,8 @@ import:
     repo:    https://github.com/akutz/logrus
 
   - package: github.com/emccode/libstorage
-    version: v0.3.1 # libstorage-version
-    repo:    https://github.com/emccode/libstorage # libstorage-repo
+    version: 0.3.1-acquia # libstorage-version
+    repo:    https://github.com/acquia/libstorage # libstorage-repo
 
   - package: github.com/akutz/gofig
     version: v0.1.4
